<resources>
    <string name="app_name">DingDongZhangfang</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!--bottom_nav_view-->
    <string name="title_home">Home</string>
    <string name="title_chart">Chart</string>
    <string name="title_fund">Fund</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="accessibility_tip">叮咚账房自动记账</string>
    <string name="accessibility_desc">叮咚账房自动记账</string>
    <string name="input">收入:</string>
    <string name="output">支出:</string>
    <string name="ContentDescriptor">Image</string>
    <string name="captcha">验证码</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="submit">确定</string>
    <string name="cancel">取消</string>
    <string name="method">交易方式：</string>
    <string name="balance">交易金额：</string>
    <string name="partner">交易对方：</string>
    <string name="tag">标签：</string>
    <string name="time">交易时间：</string>
    <string name="comment">注释：</string>
</resources>
